# searchgov-spider

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  es_index_settings.json  pyproject.toml  setup_docker_es.sh  sitemaps_endpoint.py  test_save.py
.circleci/: config.yml
.github/: dependabot.yml
cicd-scripts/: app_start.sh  app_stop.sh
cicd-scripts/helpers/: fetch_env_vars.sh  kill_sitemap_monitor.sh
convert_libsonnet/: Bing Transition Batches  - Batch 7.csv  Bing Transition Batches  - Batch 7.libsonnet  from_csv.py
docs/: advanced_setup_and_use.md  architecture.md  deployments.md  operations.md  running_scrapydwebui.md
scripts/: README.md  cache_tools.py  delete_by_domain.py  delete_by_domain.sh
scripts/convert_libsonnet/: Bing Transition Batches  - Batch 7.csv  Bing Transition Batches  - Batch 7.libsonnet  from_csv.py
scripts/sitemaps_sandbox/: sitemap_test_es_indexing.py  sitemap_test_es_indexing_broken.py  sitemap_test_es_indexing_fixed.py  sitemaps_endpoint.py
search_gov_crawler/: benchmark.py  quoting.txt  requirements.txt  run_sitemap_monitor.py  scrapy.cfg  scrapy_scheduler.py
search_gov_crawler/domains/: README.md  batch1.json  batch2.json  convertCSVtoJSON.py  crawl-sites-development.json  crawl-sites-development.md  crawl-sites-production-scrutiny.jsonnet  crawl-sites-production.json  crawl-sites-production.jsonnet  crawl-sites-production.md  crawl-sites-sample.jsonnet  crawl-sites-staging.json  crawl-sites-staging.md  crawl-sites.jsonnet  domains_elasticsearch.libsonnet  domains_endpoint.libsonnet  quotes.json  (+1 more)
(+68 files in other folders)
